# open-xiaoai

./: .dockerignore  .gitignore  README.md  agreement.md
.github/workflows/: LX06.yaml  OH2P.yaml
docs/: flash.md
examples/gemini/: README.md  main.py  pyproject.toml
examples/gemini-live/: Cargo.toml  README.md  pyproject.toml
examples/gemini-live/gemini/: gemini.py
examples/gemini-live/src/: lib.rs  macros.rs
examples/gemini/gemini/: __init__.py  gemini.py  xiaoai.py
examples/gemini/src/: server.rs
examples/kws/: README.md  boot.sh  debug.sh  init.sh  keywords.py  keywords.txt  my-keywords.txt
examples/migpt/: Cargo.toml  Dockerfile  README.md  config.ts  package.json  tsconfig.json
examples/migpt/migpt/: index.ts  speaker.ts  xiaoai.ts
examples/migpt/src/: server.rs
examples/xiaozhi/: Dockerfile  README.md  boot.sh  config.py  init.sh  main.py  pyproject.toml
examples/xiaozhi/src/: lib.rs  python.rs  server.rs
examples/xiaozhi/xiaozhi/: event.py  ref.py  xiaoai.py  xiaozhi.py
examples/xiaozhi/xiaozhi/models/: keywords.txt
examples/xiaozhi/xiaozhi/services/: speaker.py
examples/xiaozhi/xiaozhi/services/audio/: codec.py  stream.py
examples/xiaozhi/xiaozhi/services/audio/kws/: __init__.py  keywords.py  sherpa.py
examples/xiaozhi/xiaozhi/services/audio/vad/: __init__.py  (+1 more)
examples/xiaozhi/xiaozhi/services/display/: base_display.py  gui_display.py  no_display.py
examples/xiaozhi/xiaozhi/services/protocols/: protocol.py  typing.py  websocket_protocol.py
examples/xiaozhi/xiaozhi/utils/: base.py  config.py  config_manager.py  file.py
